@@ -1303,10 +1303,14 @@
 2261,1400:1600:1800,500:1000:1500,0,0,0,0
 //-- NC_ACCELERATION
 2262,0,0,0,0,30000:60000:90000,0
+//-- NC_HOVERING
+2263,0,0,0,0,30000,0
 //-- NC_SELFDESTRUCTION
 2267,3500,500,0,0,0,0
 //-- NC_INFRAREDSCAN
 2270,1000,500,15000,0,10000,0
+//-- NC_ANALYZE
+2271,1000,1000,0,0,20000,0
 //-- NC_REPAIR
 2275,1000,1000,0,0,0,0
 //-- NC_AXEBOOMERANG
