@@ -4243,6 +4243,7 @@ int skill_castend_nodamage_id (struct block_list *src, struct block_list *bl, in
 	case AB_SECRAMENT:
 	case RA_FEARBREEZE:
 	case NC_ACCELERATION:
+	case NC_HOVERING:
 	case SC_DEADLYINFECT:
 	case SO_STRIKING:
 	case GN_CARTBOOST:
@@ -6717,6 +6718,12 @@ int skill_castend_nodamage_id (struct block_list *src, struct block_list *bl, in
 		}
 		break;
 
+	case NC_ANALYZE:
+		clif_skill_damage(src,src,tick, status_get_amotion(src), 0, -30000, 1, skillid, skilllv, 6);
+		clif_skill_nodamage(src,bl,skillid,skilllv,
+			sc_start(bl,type,100,skilllv,skill_get_time(skillid,skilllv)));
+		break;
+
 	case NC_REPAIR:
 		{
 			int heal = dstsd->status.max_hp*(3+3*skilllv)/100;
@@ -8559,7 +8566,7 @@ static int skill_unit_onplace (struct skill_unit *src, struct block_list *bl, un
 
 	if (sc && sc->option&OPTION_HIDE && sg->skill_id != WZ_HEAVENDRIVE && sg->skill_id != WL_EARTHSTRAIN)
 		return 0; //Hidden characters are immune to AoE skills except Heaven's Drive and Earth Strain. [Skotlex]
-
+	
 	type = status_skill2sc(sg->skill_id);
 	sce = (sc && type != -1)?sc->data[type]:NULL;
 	skillid = sg->skill_id; //In case the group is deleted, we need to return the correct skill id, still.
@@ -8750,6 +8757,9 @@ int skill_unit_onplace_timer (struct skill_unit *src, struct block_list *bl, uns
 	}
 	type = status_skill2sc(sg->skill_id);
 	skillid = sg->skill_id;
+
+	if ( tsc && tsc->data[SC_HOVERING] )
+		return 0; //Under hovering characters are immune to trap and ground target skills.
 
 	if (sg->interval == -1) {
 		switch (sg->unit_id) {
