@@ -361,7 +361,9 @@ typedef enum sc_type {
 	SC_CAMOUFLAGE,
 
 	SC_ACCELERATION,
+	SC_HOVERING,
 	SC_INFRAREDSCAN,
+	SC_ANALYZE,
 
 	SC__ENERVATION,
 	SC__GROOMY,
